--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>Tormod Haugen</h1>
-<a href="https://github.com/tormodh/">github.com/tormodh</a>
+<div><a href="https://github.com/tormodh/">github.com/tormodh</a></div>
 </body>
 </html>
